<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cielyang.android.login.ui.fragments.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/content_header_height"
        android:layout_marginBottom="@dimen/section_vertical_spacing"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:text="@string/login_greeting"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_huge" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/section_vertical_spacing"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:hintTextAppearance="@style/TextAppearance.Design.Hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_email"
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_large" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_pwd"
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/section_vertical_spacing"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:hintTextAppearance="@style/TextAppearance.Design.Hint"
        app:passwordToggleDrawable="@drawable/ic_visibility_toggle"
        app:passwordToggleEnabled="false"
        app:passwordToggleTint="@color/textColorSecondary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_text_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_large" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/section_vertical_spacing"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/section_vertical_spacing"
        android:background="@drawable/shape_btn_login"
        android:text="@string/btn_login"
        android:textColor="@color/colorIcons"
        android:textSize="@dimen/text_size_button" />

    <TextView
        android:id="@+id/link_register"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/flat_button_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/section_vertical_spacing"
        android:gravity="center"
        android:text="@string/register_link"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_normal" />
</LinearLayout>
